<resources>
    <string name="app_name">Shiny Disco</string>
    <string name="fulllogo_bkg_description">Logo of the application with its name</string>
    <string name="register_image_button_description">Profile image to be uploaded with registration</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="openNavBar">Navigation bar open</string>
    <string name="closeNavBar">Navigation bar close</string>
    <string name="app">App</string>
    <string name="sign_out">Sign out</string>
    <string name="nav_profile_image_content_description">Profile image of the logged in user</string>
    <string name="friends_nearby">Friends nearby</string>
    <string name="explore_discos">Explore discos</string>
    <string name="logotext_bkg_light_description">Text logo of the application</string>
    <string name="map">Map</string>
    <string name="explore_discos_image_description">Clickable image to open map for disco exploring</string>
    <string name="add_disco_button_description">Button to add new disco</string>
    <string name="dark_style_map_id">47898b2ea0ef37a2</string>
    <string name="add_disco">Add disco</string>
    <string name="latitude">Latitude</string>
    <string name="latitude_colon">Latitude:</string>
    <string name="longitude">Longitude</string>
    <string name="longitude_colon">Longitude:</string>
    <string name="zero_number">0</string>
    <string name="rating">Rating</string>
    <string name="rating_colon">Rating:</string>
    <string name="music">Music</string>
    <string name="music_colon">Music:</string>
    <string name="pricing">Pricing</string>
    <string name="pricing_colon">Pricing:</string>
    <string name="disco_image_button_description">Image for disco to be added</string>
    <string name="view_disco">View disco</string>
    <string name="name_colon">Name:</string>
    <string name="disco">Disco</string>
    <string name="unknown">Unknown</string>
    <string name="add_rating">Add rating</string>
    <string name="ratings_colon">Ratings:</string>
    <string name="profile">Profile</string>
    <string name="view_profile">View profile</string>
    <string name="find_friends">Connect with friends</string>
    <string name="find_discos">Find Discos</string>
    <string name="user_id_colon">User id:</string>
    <string name="username_colon">Username:</string>
    <string name="email_colon">Email:</string>
    <string name="rank_colon">Rank:</string>
    <string name="rank_points_colon">Rank points:</string>
    <string name="settings">Settings</string>
    <string name="toggle_discos_notifications">Toggle disco notifications</string>
    <string name="disco_notification_channel_name">Disco notification channel</string>
    <string name="disco_notification_channel_description">Channel for notifications related to location</string>
    <string name="search">Search</string>
    <string name="disco_name">Disco Name</string>
    <string name="view_friend">View friend</string>
    <string name="friend">Friend</string>
    <string name="meters_from_me">Meters from me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>