<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.MainActivity.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_image_button" />

        <EditText
            android:id="@+id/register_username_input"
            android:autofillHints="username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="@color/shiny_disco_pink"
            android:textColorHighlight="@color/shiny_disco_light_cyan"
            android:textColorHint="@color/shiny_disco_purple"
            android:textColorLink="@color/shiny_disco_pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/register_name_input"
            android:autofillHints="name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@color/shiny_disco_pink"
            android:textColorHighlight="@color/shiny_disco_light_cyan"
            android:textColorHint="@color/shiny_disco_purple"
            android:textColorLink="@color/shiny_disco_pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_username_input" />

        <EditText
            android:id="@+id/register_email_input"
            android:autofillHints="email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/shiny_disco_pink"
            android:textColorHighlight="@color/shiny_disco_light_cyan"
            android:textColorHint="@color/shiny_disco_purple"
            android:textColorLink="@color/shiny_disco_pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_name_input" />

        <ImageButton
            android:id="@+id/register_image_button"
            android:layout_width="84dp"
            android:layout_height="74dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/register_image_button_description"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password_input" />

        <EditText
            android:id="@+id/register_password_input"
            android:autofillHints="password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/shiny_disco_pink"
            android:textColorHighlight="@color/shiny_disco_light_cyan"
            android:textColorHint="@color/shiny_disco_purple"
            android:textColorLink="@color/shiny_disco_pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>